--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "docugen",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,22 +10,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/pdfkit": "^0.13.5",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
-    "openai": "^4.68.4",
+    "openai": "^4.71.1",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^4.8.69",
     "pdfkit": "^0.15.0",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.17.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
